<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Wallet</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="quit">Quit</string>
    <string name="ok">OK</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="unit_cny">CNY</string>
    <string name="unit_usd">USD</string>
    <string name="account_eth">ETH</string>
    <string name="account_btc">BTC</string>
    <string name="account_usdt">USDT</string>
    <string name="create">Create</string>
    <string name="fragment_wallet">Wallet</string>
    <string name="fragment_pay">Quick Pay</string>
    <string name="fragment_me">Me</string>
    <string name="title_brahma_wallet">Wallet</string>
    <string name="brahma_wallet_desc">Your smart digital wallet</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="total_assets">Total Assets</string>
    <string name="action_add_assets">Add Assets</string>
    <string name="asymptotic">≈</string>
    <string name="blank_space">&#160;</string>
    <string name="error_network">Network connect error!</string>
    <string name="action_next">Next</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_finish">Finish</string>
    <string name="dialog_title_upgrade_prompt">Update prompt</string>
    <string name="nav_menu_other">Other</string>
    <string name="nav_menu_setting">Settings</string>
    <string name="nav_menu_help">Help</string>
    <string name="nav_menu_info">About Us</string>
    <string name="dialog_title_quit_import">Quit the import?</string>
    <string name="dialog_content_quit_import">  </string>
    <string name="title_accounts">Accounts</string>
    <string name="title_tab_account_ethereum">Ethereum</string>
    <string name="title_tab_account_bitcoin">Bitcoin</string>
    <string name="title_account_assets">Account assets</string>
    <string name="title_account_detail">Account detail</string>
    <string name="title_account_change_name">Change name</string>
    <string name="title_account_change_password">Change password</string>
    <string name="action_copy_address">Copy address</string>
    <string name="title_dialog_export_keystore">Export keystore</string>
    <string name="title_dialog_export_private_key">Export private key</string>
    <string name="title_dialog_export_public_key">Export public key</string>
    <string name="title_dialog_export_mnemonics">Export mnemonics</string>
    <string name="export_keystore_tip_1">
        Store offline. Please store keystore to a safe offline place. Never put it on internet.
    </string>
    <string name="export_keystore_tip_2">
        Don\'t transfer via internet Tools. It is recommended to execute a transaction by scanning the account\'s QR Code offline.
    </string>
    <string name="export_keystore_tip_3">
        Don\'t screenshot.Don\'t take screenshot or photos to store account information.
    </string>
    <string name="keystore_qrcode_title_1">
        Only for Transport Account
    </string>
    <string name="keystore_qrcode_tip_1">
        Forbidden to save\/screenshot\/take photos of the QR code. It\'s convenience to transport account to your other devices.
    </string>
    <string name="keystore_qrcode_title_2">
        Using in Safe Environment
    </string>
    <string name="keystore_qrcode_tip_2">
        Please make sure nobody and no camera around where using. It may cause irreversible loss if somebody catch it.
    </string>
    <string name="confirm_qr_code_show">
        Please confirm no one and camera around.
    </string>
    <string name="btn_show_qr_code">Show QR Code</string>
    <string name="export_private_key_tip_1">
        Warning: Export plain private key is very dangerous.
    </string>
    <string name="export_mnemonics_tip_1">
        Warning: Export plain mnemonics is very dangerous.
    </string>
    <string name="delete_account_tip">
        Caution! This operation cannot be revoked!
    </string>
    <string name="title_backup_keystore">Export Keystore</string>
    <string name="title_tab_keystore">Keystore</string>
    <string name="title_tab_qr_code">QR Code</string>
    <string name="action_copy_keystore">Copy Keystore</string>
    <string name="label_avatar">Avatar</string>
    <string name="label_account_name">Name</string>
    <string name="label_account_address">Address</string>
    <string name="label_qrcode">Address Code</string>
    <string name="label_touch_id">Touch ID Pay</string>
    <string name="touch_id_info">Touch ID makes payment safer and quicker</string>
    <string name="touch_id_view">View</string>
    <string name="touch_id_notice">Touch ID Payment Notice</string>
    <string name="touch_id_open">Agree And Open</string>
    <string name="touch_id_close">Close</string>
    <string name="touch_id_open_succ">Open Successfully</string>
    <string name="action_change_account_name">Change Name</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_export_private_key">Export Private Key</string>
    <string name="action_export_public_key">Export Public Key</string>
    <string name="action_export_keystore">Export Keystore</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_export_mnemonics">Export Mnemonics</string>
    <string name="touch_id_no_hardware">The device has not detected the fingerprint hardware!</string>
    <string name="touch_id_no_fingerprint">The device does not enter fingerprints, please go to the system -> settings to add fingerprints.</string>
    <string name="verify_fingerprint">Verify Fingerprint</string>
    <string name="touch_id_failed_to_get_key">Can not get key for this account!</string>
    <string name="touch_id_auth_succ">Success open touch id auth.</string>
    <string name="touch_id_auth_fail">Failed open touch id auth！</string>
    <string name="success_change_account_name">Change account name success!</string>
    <string name="error_change_account_name">Change account name error!!!</string>
    <string name="success_change_password">Change password success!</string>
    <string name="error_change_password">Change password error!!!</string>
    <string name="error_current_password">Error Password!!!</string>
    <string name="success_delete_account">Success delete account.</string>
    <string name="error_delete_account">Error delete account!!!</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="tip_reset_password">Forget account password? You can reset password by using private key import.</string>
    <string name="tip_reset_finger">Note: If you have open Touch ID Pay, you need reopen it after changing password.</string>
    <string name="sync">sync…</string>
    <string name="progress_create_account">create…</string>
    <string name="progress_import_account">import…</string>
    <string name="progress_transfer_success">transfer success</string>
    <string name="progress_transfer_fail">transfer failed</string>
    <string name="progress_verify_account">verifying account</string>
    <string name="progress_send_request">sending request</string>
    <string name="prompt_account_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_account_password">Account Password</string>
    <string name="prompt_close_touch_id">Are you sure you want to close Touch ID Pay?</string>
    <string name="prompt_sure">Sure</string>
    <string name="prompt_no">No</string>
    <string name="action_agree">Agree on</string>
    <string name="service_agreement">&#160;Service Agreement&#160;</string>
    <string name="protocol_and">and</string>
    <string name="privacy_policy">&#160;Privacy Policy</string>
    <string name="tip_create_account_one">&#8226;&#160;&#160;Password strength is critical to guard your account</string>
    <string name="tip_create_account_two">&#8226;&#160;&#160;BrahmaWallet can\'t recover the password, please backup cautiously</string>
    <string name="error_incorrect_name">The name is taken</string>
    <string name="error_invalid_password">This password is too simple!</string>
    <string name="error_incorrect_password">Password is not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="success_create_account">Create account success!</string>
    <string name="error_create_account">Create account error! please try again!</string>
    <string name="error_account_exists">Account exists! Please check the input.</string>
    <string name="error_account_address">Error account address!</string>
    <string name="success_import_account">Import account success!</string>
    <string name="error_import_keystore">Import account error! please check keystore and password!</string>
    <string name="error_import_private_key">Import account error! please check private key!</string>
    <string name="error_keystore">Error keystore!</string>
    <string name="error_private_key">Error private key!</string>
    <string name="error_mnemonics">Error mnemonics!</string>
    <string name="error_mnemonics_length">Wrong numbers of mnemonics!</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_contacts">Contacts</string>
    <string name="action_restore_account">Import Account</string>
    <string name="import_mnemonics_hint">Please use space to separate mnemonic words.</string>
    <string name="title_setting_lang_currency">General</string>
    <string name="title_setting_privacy">Privacy</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_currency_unit">Currency Unit</string>
    <string name="pref_title_touch_id">Touch ID</string>
    <string name="pref_summary_touch_id">No operation after 5s</string>
    <string name="pref_title_statistic">Usage statistics and crash reports</string>
    <string name="pref_summary_statistic">Help to improve the use experience</string>
    <string name="key_wallet_language">wallet.language</string>
    <string name="key_wallet_currency_unit">wallet.currency.unit</string>
    <string name="key_touch_id_switch">wallet.touch.id.switch</string>
    <string name="key_statistic_switch">wallet.statistic.switch</string>
    <string name="title_account_backup">Backup Account</string>
    <string name="tip_backup_account">Please backup your account now!</string>
    <string name="desc_backup_account_one">
        The account is your blockchain account which is total different from website or app account and it is cryptographic based.
    </string>
    <string name="desc_backup_account_two">
        You need to double check the account is being backup properly in case of any assets loss.
    </string>
    <string name="desc_backup_account_three">
        We recommend that you immediately back up the mnemonic. We will not store your mnemonics, so if you do not back it up, you will not be able to back up the mnemonic the next time you enter the account, but you can still back up account using the keystore file or private key.
    </string>
    <string name="btn_backup_now">Backup Now</string>
    <string name="title_approve_transaction">Approve Transaction</string>
    <string name="tip_approve_transaction">
        Contract Approve is required before starting the transaction.
    </string>
    <string name="prompt_approval_amount">Allowance</string>
    <string name="question_contract_approval">What is contract approval and allowance?</string>
</resources>