<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_setting_lang_currency">
        <ListPreference
            android:entries="@array/pref_language_list_titles"
            android:entryValues="@array/pref_language_list_values"
            android:key="@string/key_wallet_language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_language" />
        <ListPreference
            android:entries="@array/pref_currency_unit_list_titles"
            android:entryValues="@array/pref_currency_unit_list_values"
            android:key="@string/key_wallet_currency_unit"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_currency_unit" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_touch_id_switch"
            android:title="@string/pref_title_touch_id"
            android:summary="@string/pref_summary_touch_id"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_setting_privacy"
        android:layout="@layout/privacy_preference_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_statistic_switch"
            android:title="@string/pref_title_statistic"
            android:summary="@string/pref_summary_statistic"/>
    </PreferenceCategory>

</PreferenceScreen>
