<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:textSize="@dimen/font_size_subheading"
        android:paddingTop="@dimen/space_normal"
        android:paddingStart="@dimen/space_normal"
        android:paddingEnd="@dimen/space_normal"
        android:textColor="@color/color_primary_text"
        android:text="@string/title_dialog_export_keystore"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/light_yellow_bg"
        android:layout_margin="@dimen/space_normal"
        android:padding="@dimen/space_smaller">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_keystore_tip_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_keystore_tip_2"
            android:layout_marginTop="@dimen/space_smaller"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_keystore_tip_3"
            android:layout_marginTop="@dimen/space_smaller"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_dialog_keystore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@color/main_bg"
        android:layout_marginStart="@dimen/space_normal"
        android:layout_marginEnd="@dimen/space_normal"
        android:padding="@dimen/space_smaller"/>
</LinearLayout>