<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextAppearance="@style/ToolbarTitleText"
                app:title="@string/title_account_backup"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/main_bg"
            android:layout_marginTop="@dimen/height_toolbar">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/space_larger"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/backup"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/space_larger"
                android:textSize="@dimen/font_size_title"
                android:textColor="@color/color_primary_text"
                android:text="@string/tip_backup_account"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_marginEnd="@dimen/space_normal"
                android:layout_marginTop="@dimen/space_larger"
                android:padding="@dimen/space_normal"
                android:background="@drawable/light_yellow_bg"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_backup_account_one"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_normal"
                    android:text="@string/desc_backup_account_two"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_normal"
                    android:text="@string/desc_backup_account_three"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_backup_now"
                style="@style/ButtonSingle"
                android:layout_marginTop="@dimen/space_larger"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_marginEnd="@dimen/space_normal"
                android:text="@string/btn_backup_now"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>

