<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="@dimen/space_normal"
            android:paddingEnd="@dimen/space_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:layout_marginBottom="@dimen/space_normal"
                android:padding="@dimen/space_small"
                android:inputType="textMultiLine"
                android:lines="4"
                android:gravity="start|top"
                android:textSize="@dimen/font_size_subheading"
                android:background="@drawable/editor_normal_bg"
                android:hint="@string/import_mnemonics_hint"
                android:lineSpacingMultiplier="1.2"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>

            <LinearLayout
                android:id="@+id/layout_divider"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_unit"
                android:layout_marginBottom="@dimen/space_unit"
                android:layout_marginStart="@dimen/space_unit"
                android:layout_marginEnd="@dimen/space_unit"
                android:background="@color/horizontal_divider"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account_name"
                    android:maxLines="1"
                    android:textSize="@dimen/font_size_subheading"
                    android:inputType="text"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_keystore_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textSize="@dimen/font_size_subheading"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_repeat_password"
                    android:textSize="@dimen/font_size_subheading"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/space_normal">

                <CheckBox
                    android:id="@+id/checkbox_read_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_agree" />

                <TextView
                    android:clickable="true"
                    android:id="@+id/service_tv"
                    android:textColor="@color/master"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_agreement"
                    android:focusable="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protocol_and"/>
                <TextView
                    android:clickable="true"
                    android:id="@+id/privacy_policy_tv"
                    android:textColor="@color/master"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:focusable="true" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_import_mnemonics"
                style="@style/ButtonSingle"
                android:enabled="false"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/action_restore_account"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

