<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/space_normal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/keystore_qrcode_title_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_hint_text"
                android:textSize="@dimen/font_size_body"
                android:layout_marginTop="@dimen/space_unit"
                android:text="@string/keystore_qrcode_tip_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space_smaller"
                android:text="@string/keystore_qrcode_title_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_hint_text"
                android:layout_marginTop="@dimen/space_unit"
                android:text="@string/keystore_qrcode_tip_2"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_marginTop="@dimen/space_largest"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/iv_keystore_qrcode"
                android:layout_width="260dp"
                android:layout_height="260dp" />
            <LinearLayout
                android:id="@+id/layout_tip_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/qr_code_tip"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/icon_large_size"
                    android:layout_height="@dimen/icon_large_size"
                    android:layout_marginTop="@dimen/space_larger"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_camera"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/space_large"
                    android:paddingStart="@dimen/space_normal"
                    android:paddingEnd="@dimen/space_normal"
                    android:textSize="@dimen/font_size_subheading"
                    android:text="@string/confirm_qr_code_show"/>
                <Button
                    android:id="@+id/btn_show_keystore_qr_code"
                    style="@style/ButtonGraySingle"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/space_normal"
                    android:paddingEnd="@dimen/space_normal"
                    android:layout_marginTop="@dimen/space_larger"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color_secondary_text"
                    android:text="@string/btn_show_qr_code"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

