<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textSize="@dimen/font_size_subheading"
            android:paddingTop="@dimen/space_normal"
            android:paddingStart="@dimen/space_normal"
            android:paddingEnd="@dimen/space_normal"
            android:textColor="@color/black"
            android:text="@string/title_approve_transaction"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="@dimen/space_normal"
            android:paddingEnd="@dimen/space_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:textSize="@dimen/font_size_subheading"
                android:text="@string/tip_approve_transaction"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_approve_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_approval_amount"
                    android:textSize="@dimen/font_size_subheading"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_approve_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/space_smaller"
                android:text="@string/question_contract_approval"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>